--- a/OperationComparison/Base.lproj/Main.storyboard
+++ b/OperationComparison/Base.lproj/Main.storyboard
@@ -24,33 +24,47 @@
                                     <constraint firstAttribute="width" constant="140" id="RlI-7S-6Br"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVe-Ot-Mqf">
-                                <rect key="frame" x="140.5" y="294.5" width="94" height="30"/>
-                                <state key="normal" title="LOAD DATAS!"/>
-                                <connections>
-                                    <action selector="loadAndProcess" destination="BYZ-38-t0r" eventType="touchUpInside" id="w0Y-Hm-WLM"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cwu-mu-bkq">
+                                <rect key="frame" x="20" y="294.5" width="335" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVe-Ot-Mqf">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                        <state key="normal" title="LOAD DATAS!"/>
+                                        <connections>
+                                            <action selector="loadAndProcess" destination="BYZ-38-t0r" eventType="touchUpInside" id="w0Y-Hm-WLM"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T1x-Sn-48i">
+                                        <rect key="frame" x="0.0" y="30" width="335" height="30"/>
+                                        <state key="normal" title="Load With Custom Operator"/>
+                                        <connections>
+                                            <action selector="loadAndProcessCustomOperator" destination="BYZ-38-t0r" eventType="touchUpInside" id="vvT-bD-ZlT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VaD-fg-fLA">
+                                <rect key="frame" x="177.5" y="177.5" width="20" height="20"/>
+                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RyM-Gs-YsF">
-                                <rect key="frame" x="187.5" y="332.5" width="0.0" height="0.0"/>
+                                <rect key="frame" x="187.5" y="374.5" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VaD-fg-fLA">
-                                <rect key="frame" x="177.5" y="177.5" width="20" height="20"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="cwu-mu-bkq" firstAttribute="top" secondItem="FYl-e5-953" secondAttribute="bottom" constant="20" id="2xf-5z-aUG"/>
                             <constraint firstItem="VaD-fg-fLA" firstAttribute="centerX" secondItem="FYl-e5-953" secondAttribute="centerX" id="3iz-n5-hQw"/>
-                            <constraint firstItem="TVe-Ot-Mqf" firstAttribute="top" secondItem="FYl-e5-953" secondAttribute="bottom" constant="20" id="5KR-4x-f03"/>
                             <constraint firstItem="FYl-e5-953" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="BWb-hQ-2m1"/>
-                            <constraint firstItem="RyM-Gs-YsF" firstAttribute="top" secondItem="TVe-Ot-Mqf" secondAttribute="bottom" constant="8" id="JGP-Xt-TlB"/>
-                            <constraint firstItem="TVe-Ot-Mqf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QdJ-KL-6IO"/>
+                            <constraint firstItem="cwu-mu-bkq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RVf-Jv-1mG"/>
+                            <constraint firstItem="RyM-Gs-YsF" firstAttribute="top" secondItem="cwu-mu-bkq" secondAttribute="bottom" constant="20" id="ik3-uX-rpn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cwu-mu-bkq" secondAttribute="trailing" constant="20" id="meb-FB-OtJ"/>
                             <constraint firstItem="VaD-fg-fLA" firstAttribute="centerY" secondItem="FYl-e5-953" secondAttribute="centerY" id="n3w-Bn-SeX"/>
                             <constraint firstItem="FYl-e5-953" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oc2-ZW-i5g"/>
                             <constraint firstItem="RyM-Gs-YsF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sww-Tz-uQf"/>
+                            <constraint firstItem="cwu-mu-bkq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="xYn-o1-bfl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -62,6 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="40.799999999999997" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
