--- a/OperationComparison/Base.lproj/Main.storyboard
+++ b/OperationComparison/Base.lproj/Main.storyboard
@@ -18,14 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FYl-e5-953">
-                                <rect key="frame" x="117.5" y="100" width="140" height="140"/>
+                                <rect key="frame" x="80" y="100" width="215" height="215"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="Irm-UV-yMc"/>
-                                    <constraint firstAttribute="width" constant="140" id="RlI-7S-6Br"/>
+                                    <constraint firstAttribute="width" secondItem="FYl-e5-953" secondAttribute="height" multiplier="1:1" id="3r2-yO-urs"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cwu-mu-bkq">
-                                <rect key="frame" x="20" y="260" width="335" height="120"/>
+                                <rect key="frame" x="20" y="335" width="335" height="120"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVe-Ot-Mqf">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
@@ -58,10 +57,10 @@
                                 </subviews>
                             </stackView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VaD-fg-fLA">
-                                <rect key="frame" x="177.5" y="160" width="20" height="20"/>
+                                <rect key="frame" x="177.5" y="197.5" width="20" height="20"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RyM-Gs-YsF">
-                                <rect key="frame" x="187.5" y="400" width="0.0" height="0.0"/>
+                                <rect key="frame" x="187.5" y="475" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -73,6 +72,8 @@
                             <constraint firstItem="VaD-fg-fLA" firstAttribute="centerX" secondItem="FYl-e5-953" secondAttribute="centerX" id="3iz-n5-hQw"/>
                             <constraint firstItem="FYl-e5-953" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="BWb-hQ-2m1"/>
                             <constraint firstItem="cwu-mu-bkq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RVf-Jv-1mG"/>
+                            <constraint firstItem="FYl-e5-953" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="80" id="XJc-fc-mK1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FYl-e5-953" secondAttribute="trailing" constant="80" id="h60-OK-YCm"/>
                             <constraint firstItem="RyM-Gs-YsF" firstAttribute="top" secondItem="cwu-mu-bkq" secondAttribute="bottom" constant="20" id="ik3-uX-rpn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cwu-mu-bkq" secondAttribute="trailing" constant="20" id="meb-FB-OtJ"/>
                             <constraint firstItem="VaD-fg-fLA" firstAttribute="centerY" secondItem="FYl-e5-953" secondAttribute="centerY" id="n3w-Bn-SeX"/>
